--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,17 +2,16 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <i class="bi bi-hand-index pe-3" style="transform: scale(1.6);"></i>
+        <!-- <i class="bi bi-hand-index pe-3" style="transform: scale(1.6);"></i> -->
         <span>Klickz</span>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#values">Values</a></li>
-          <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
+          <li><a class="nav-link scrollto" href="#about">О проекте</a></li>
+          <li><a class="nav-link scrollto" href="#features">Особенности сервиса</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Цена</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -27,12 +26,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
+          <h1 data-aos="fade-up">Стабильное и масштабируемое решение для вашего бизнеса!</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Попробуйте наш сервис который поможет вам лучше узнать поведение вашей аудитории</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                <span>Get Started</span>
+              <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center" disabled>
+                <span>Начать</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
             </div>
@@ -55,17 +54,18 @@
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
-              <h3>Who We Are</h3>
-              <h2>Expedita voluptas omnis cupiditate totam eveniet nobis sint iste. Dolores est repellat corrupti reprehenderit.</h2>
+              <h3>О проекте</h3>
+              <h2>Наш сервис поможет вам получить развернутую статистику о том, куда пользователи переходят из вашего ресурса</h2>
               <p>
-                Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
+                Используя наш веб-сайт вы сможете создать уникальную ссылку, переходы по которой вы сможете увидеть в своем личном кабинете в режиме реального времени. 
+                А удобные графики и таблицы помогут вам понять поведение вашей аудитории.
               </p>
-              <div class="text-center text-lg-start">
+              <!-- <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Read More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -78,59 +78,82 @@
 
     </section><!-- End About Section -->
 
-    <!-- ======= Values Section ======= -->
-    <section id="values" class="values">
-
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h2>Our Values</h2>
-          <p>Odit est perspiciatis laborum et dicta</p>
-        </header>
-
-        <div class="row">
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="box">
-              <img src="./assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Ad cupiditate sed est odio</h3>
-              <p>Eum ad dolor et. Autem aut fugiat debitis voluptatem consequuntur sit. Et veritatis id.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
-            <div class="box">
-              <img src="./assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Voluptatem voluptatum alias</h3>
-              <p>Repudiandae amet nihil natus in distinctio suscipit id. Doloremque ducimus ea sit non.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
-            <div class="box">
-              <img src="./assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Fugit cupiditate alias nobis.</h3>
-              <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section><!-- End Values Section -->
-
-
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
 
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Features</h2>
-          <p>Laboriosam et omnis fuga quis dolor direda fara</p>
+          <h2>Особенности</h2>
+          <p>Для нас важно, что бы вы знали, почему вам стоит довериться именно нам</p>
         </header>
 
+                <!-- Feature Icons -->
+                <div class="row feature-icons" data-aos="fade-up">
+        
+                  <div class="row">
+        
+                    <div class="col-xl-4 text-center" data-aos="fade-right" data-aos-delay="100">
+                      <img src="./assets/img/features-3.png" class="img-fluid p-4" alt="">
+                    </div>
+        
+                    <div class="col-xl-8 d-flex content">
+                      <div class="row align-self-center gy-4">
+        
+                        <div class="col-md-6 icon-box" data-aos="fade-up">
+                          <i class="ri-line-chart-line"></i>
+                          <div>
+                            <h4>Нулевой downtime</h4>
+                            <p>Наши сервисы доступны всегда и работают без остановок.</p>
+                          </div>
+                        </div>
+        
+                        <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                          <i class="ri-stack-line"></i>
+                          <div>
+                            <h4>Доступный и понятный интерфейс</h4>
+                            <p>Вам потребуется всего минута, что бы создать уникальную ссылку.</p>
+                          </div>
+                        </div>
+        
+                        <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+                          <i class="ri-brush-4-line"></i>
+                          <div>
+                            <h4>Техническая интеграция</h4>
+                            <p>Воспользуйтесь документацией нашего API и интегрируйте наш сервис в ваши системы.</p>
+                          </div>
+                        </div>
+        
+                        <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+                          <i class="ri-magic-line"></i>
+                          <div>
+                            <h4>Развернутая статистика</h4>
+                            <p>Получайте всю необходимую вам информацию на одной странице.</p>
+                          </div>
+                        </div>
+        
+                        <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+                          <i class="ri-command-line"></i>
+                          <div>
+                            <h4>Делитесь статистикой</h4>
+                            <p>Вы можете поделиться правами на просмотр статистики с другими пользователями, или же экспортировать ее в удобном вам формате.</p>
+                          </div>
+                        </div>
+        
+                        <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+                          <i class="ri-radar-line"></i>
+                          <div>
+                            <h4>Круглосуточная поддержка</h4>
+                            <p>Пишите нам в любое время!</p>
+                          </div>
+                        </div>
+        
+                      </div>
+                    </div>
+        
+                  </div>
+        
+                </div><!-- End Feature Icons -->
 
         <!-- Feature Tabs -->
         <div class="row feture-tabs" data-aos="fade-up">
@@ -205,74 +228,6 @@
 
         </div><!-- End Feature Tabs -->
 
-        <!-- Feature Icons -->
-        <div class="row feature-icons" data-aos="fade-up">
-          <h3>Ratione mollitia eos ab laudantium rerum beatae quo</h3>
-
-          <div class="row">
-
-            <div class="col-xl-4 text-center" data-aos="fade-right" data-aos-delay="100">
-              <img src="./assets/img/features-3.png" class="img-fluid p-4" alt="">
-            </div>
-
-            <div class="col-xl-8 d-flex content">
-              <div class="row align-self-center gy-4">
-
-                <div class="col-md-6 icon-box" data-aos="fade-up">
-                  <i class="ri-line-chart-line"></i>
-                  <div>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <i class="ri-stack-line"></i>
-                  <div>
-                    <h4>Ullamco laboris nisi</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <i class="ri-brush-4-line"></i>
-                  <div>
-                    <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <i class="ri-magic-line"></i>
-                  <div>
-                    <h4>Beatae veritatis</h4>
-                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-                  <i class="ri-command-line"></i>
-                  <div>
-                    <h4>Molestiae dolor</h4>
-                    <p>Et fuga et deserunt et enim. Dolorem architecto ratione tensa raptor marte</p>
-                  </div>
-                </div>
-
-                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-                  <i class="ri-radar-line"></i>
-                  <div>
-                    <h4>Explicabo consectetur</h4>
-                    <p>Est autem dicta beatae suscipit. Sint veritatis et sit quasi ab aut inventore</p>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-
-        </div><!-- End Feature Icons -->
-
       </div>
 
     </section><!-- End Features Section -->
@@ -284,25 +239,25 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Pricing</h2>
-          <p>Check our Pricing</p>
+          <h2>Цена</h2>
         </header>
 
         <div class="row gy-4" data-aos="fade-left">
 
           <div class="col-lg-6 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
-              <h3 style="color: #07d5c0;">Free Plan</h3>
-              <div class="price"><sup>$</sup>0<span> / mo</span></div>
+              <h3 style="color: #07d5c0;">Базовый план</h3>
+              <div class="price"><sup>₸</sup>0<span> в месяц</span></div>
               <img src="./assets/img/pricing-free.png" class="img-fluid" alt="">
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Неограниченное количество ссылок</li>
+                <li>Неограниченное количество переходов</li>
+                <li>Развернутая статистика</li>
+                <li>Возможность делиться правами на просмотр</li>
+                <li class="na">Интеграция через API</li>
+                <li class="na">Полная статистика</li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+              <a href="#" class="btn-buy">Начать использование</a>
             </div>
           </div>
 
@@ -310,17 +265,18 @@
 
           <div class="col-lg-6 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="box">
-              <h3 style="color: #ff0071;">Ultimate Plan</h3>
-              <div class="price"><sup>$</sup>20<span> / mo</span></div>
+              <h3 style="color: #ff0071;">Ultimate План</h3>
+              <div class="price"><sup>₸</sup>9990<span> в месяц</span></div>
               <img src="./assets/img/pricing-ultimate.png" class="img-fluid" alt="">
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Неограниченное количество ссылок</li>
+                <li>Неограниченное количество переходов</li>
+                <li>Развернутая статистика</li>
+                <li>Возможность делиться правами на просмотр</li>
+                <li>Интеграция через API</li>
+                <li>Полная статистика</li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+              <a href="#" class="btn-buy">Подключить</a>
             </div>
           </div>
 
@@ -345,7 +301,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <i class="bi bi-hand-index pe-3" style="transform: scale(1.6);"></i>
+              <!-- <i class="bi bi-hand-index pe-3" style="transform: scale(1.6);"></i> -->
               <span>Klickz</span>
             </a>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
