--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -883,8 +883,8 @@
     border: 1px solid #4154f1;
   }
   .pricing .btn-buy:hover {
-    background: #4154f1;
-    color: #fff;
+    //background: #4154f1;
+    //color: #fff;
   }
   .pricing .featured {
     width: 200px;
