--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,10 +30,14 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Попробуйте наш сервис который поможет вам лучше узнать поведение вашей аудитории</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
-              <!-- <button class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center" disabled="true">
+              <!-- <button class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                 <span>Начать</span>
                 <i class="bi bi-arrow-right"></i>
               </button> -->
+              <a href="#authorization" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                <span>Начать</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
             </div>
           </div>
         </div>
@@ -261,6 +265,9 @@
       </div>
 
     </section><!-- End Pricing Section -->
+
+      <app-authorization id="authorization"></app-authorization>
+
 
 
 
