--- a/src/app/authorization/authorization.component.scss
+++ b/src/app/authorization/authorization.component.scss
@@ -22,20 +22,35 @@ a {
   .wrapper {
     display: flex;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: row; 
     justify-content: center;
     width: 100%;
     min-height: 100%;
-    padding: 20px;
+    padding: 10%;
+  }
+
+  .number{
+    background-color: grey;
+  }
+
+  .element{
+    background-color: red;
   }
   
   #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
-    padding: 30px;
-    width: 90%;
-    max-width: 450px;
+    padding: 10%;
+    padding-top: 0;
+    padding-bottom: 5%;
+    width: 35rem;
+    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    //max-width: 450px;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
@@ -47,9 +62,37 @@ a {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
     padding: 25px;
+    width: 100%;
     text-align: center;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    button{
+      background-color: rgba(51, 51, 51, 0.05);
+      border-radius: 8px;
+      border-width: 0;
+      width: 100%;
+      color: #333333;
+      cursor: pointer;
+      display: inline-block;
+      font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 20px;
+      list-style: none;
+      margin: 0;
+      padding: 10px 12px;
+      text-align: center;
+      transition: all 200ms;
+      vertical-align: baseline;
+      white-space: nowrap;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
   }
   
   
